--- a/views/terminosyc.html
+++ b/views/terminosyc.html
@@ -1,2 +1,14 @@
-<h1>Esta pagina web es propiedad y esta operando por javier ramos. Estos terminos establecidos seran de uso personal.etc</h1>
-<a href="Registro.html"><button>Entendido</button></a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>terminos</title>
+</head>
+<body>
+    <h1>Esta pagina web es propiedad y esta operado por javier ramos. Estos terminos establecidos seran de uso personal.etc</h1>
+    <input type="checkbox" name="acepto" value="si" id="acepto"><label for="acepto">Acepto terminos y condiciones</label><br>
+    <button>Aceptar</button><br>
+    <a href="./registro.html">Volver Al registro</a>
+</body>
+</html>
