--- a/views/galeria.html
+++ b/views/galeria.html
@@ -7,29 +7,37 @@
     <link rel="stylesheet" href="./../css/estilo1.css">
 </head>
 <body>
-    <a href="./../index.html">INICIO</a>
-    <h1>FOTOS DE VENTAS</h1>
+    <header>
+        <img class=img8 src="./../img/logo-celima-trebol-x2-14.04.22-1.png" alt="imagen8" width="1040" height="120">
+    </header>
+    <nav>
+        <a href="./../index.html">INICIO</a>
+    </nav>
+        <h1>FOTOS DE VENTAS</h1>
     <main>
-        <div class="imag">
-            <img src="./../img/beton.jpg" alt="imagen" width="200" height="200">
+        <div>
+            <img class=img src="./../img/beton.jpg" alt="imagen" width="225" height="225">
         </div>
         <div>
-            <img src="./../img/ceramico.jpg" alt="imagen1" width="200" height="200">
+            <img class=img1 src="./../img/ceramico.jpg" alt="imagen1" width="225" height="225">
         </div>
         <div>
-            <img src="./../img/inodoro.png" alt="imagen2" width="200" height="200">
+            <img class=img2 src="./../img/inodoro.png" alt="imagen2" width="1080" height="1080">
         </div>
         <div>
-            <img src="./../img/lavatorio.jpg" alt="imagen3" width="200" height="200">
+            <img class=img3 src="./../img/lavatorio.jpg" alt="imagen3" width="1024" height="1024">
         </div>
         <div>
-            <img src="./../img/repuesto.jpg" alt="imagen4" width="200" height="200">
+            <img class=img4 src="./../img/repuesto.jpg" alt="imagen4" width="225" height="225">
         </div>
         <div>
-            <img src="./../img/respuesto1.jpg" alt="imagen5" width="200" height="200">
+            <img class=img5 src="./../img/respuesto1.jpg" alt="imagen5" width="210" height="210">
         </div>
 
     </main>
+    <footer>
+        <p>&copy; Todos los derechos reservados</p>
+    </footer>
     
 </body>
 </html>
