--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -7,9 +7,67 @@ main{
     grid-template-rows: 200px 200px;
     grid-gap: 1rem;
 }
-img{
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
+
+.img{
+    width: 200px;
+    height: 200px;
+    
     object-fit: cover;
+}
+.img1{
+    width: 200px;
+    height: 200px;
+    
+    object-fit: cover;
+}
+.img2{
+    width: 200px;
+    height: 200px;
+   
+    object-fit: cover;
+}
+.img3{
+    width: 200px;
+    height: 200px;
+    
+    object-fit: cover;
+}
+.img4{
+    width: 200px;
+    height: 200px;
+    
+    object-fit: cover;
+}
+.img5{
+    width: 200px;
+    height: 200px;
+    
+    object-fit: cover;
+}
+nav{
+    display: flex;
+    background-color: #333;
+}
+/* Style the navigation bar links */
+nav a{
+    color: white;
+    padding: 14px 20px;
+    text-decoration: none;
+    text-align: center;
+}
+/* Change color on hover */
+nav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+footer {
+    padding: 20px;
+    text-align: center;
+    background: #19a4c7;
+    color: white;
+    
+}
+.img8{
+    width: 400px;
+    height: 100px;
 }
