--- a/css/estilo2.css
+++ b/css/estilo2.css
@@ -1,4 +1,31 @@
-header{
-    grid-area: mi-header;
-    background-color: rgb(156, 198, 200);
+
+nav{
+    display: flex;
+    background-color: #333;
+}
+/* Style the navigation bar links */
+nav a{
+    color: white;
+    padding: 14px 20px;
+    text-decoration: none;
+    text-align: center;
+}
+/* Change color on hover */
+nav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+footer{
+    padding: 20px;
+    text-align: center;
+    background: #19a4c7;
+    color: white;
+} 
+.img8{
+    width: 400px;
+    height: 100px;
+}
+.img7{
+    width: 200px;
+    height: 400px;
 }
