--- a/views/contacto.html
+++ b/views/contacto.html
@@ -7,16 +7,25 @@
     <link rel="stylesheet" href="./../css/estilo2.css">
 </head>
 <body>
-    <a href="./../index.html">INICIO</a>
     <header>
-        <h1>UBICACIÒN DEL TRABAJO</h1>
-        <nav>DIRECION:PUNTA HERMOSA</nav>
-        <nav>NUMERO:96271697</nav>
-        <nav>ABIERTO LAS 24 HORAS</nav>
+        <img class=img8 src="./../img/logo-celima-trebol-x2-14.04.22-1.png" alt="imagen8" width="1040" height="120">
     </header>
+    <nav>
+        <a href="./../index.html">INICIO</a>
+    </nav>
+    
+    <main>
+        <h2>UBICACIÒN DEL TRABAJO</h2>
+        <p>DIRECION:PUNTA HERMOSA</p>
+        <p>NUMERO:96271697</p>
+        <p>ABIERTO LAS 24 HORAS</p>
+    </main>
     <div>
-        <img src="./../img/imagen2.png" alt="imagen7" width="200" height="350">
+        <img class=img7 src="./../img/imagen2.png" alt="imagen7" width="1080" height="1888">
     </div>
+    <footer>
+        <p>&copy; Todos los derechos reservados</p>
+    </footer>
 
 </body>
-</html>
+</html> 
