--- a/views/registro.html
+++ b/views/registro.html
@@ -7,7 +7,12 @@
         <link rel="stylesheet" href="./../css/estilo3.css">
     </head>
     <body>
-        <a href="./../index.html">INICIO</a>
+        <header>
+            <img class=img8 src="./../img/logo-celima-trebol-x2-14.04.22-1.png" alt="imagen8" width="1040" height="120">
+        </header>
+        <nav>
+            <a href="./../index.html">INICIO</a>
+        </nav>
         <section class="form-register">
             <h1>FORMULARIO DE REGISTRO</h1>
             <form action="enviar.php" method="get">
@@ -32,6 +37,9 @@
                 <p><a href="#">¿Ya Tengo Cuenta?</a></p>
             </form>
         </section>
+        <footer>
+            <p>&copy; Todos los derechos reservados</p>
+        </footer>
    
     </body>
 </html> 
