--- a/views/contacto.html
+++ b/views/contacto.html
@@ -12,6 +12,8 @@
     </header>
     <nav>
         <a href="./../index.html">INICIO</a>
+        <a href="./../views/registro.html">REGISTRO</a>
+        <a href="./../views/galeria.html">GALERIA</a>
     </nav>
     
     <main>
