--- a/views/galeria.html
+++ b/views/galeria.html
@@ -12,6 +12,8 @@
     </header>
     <nav>
         <a href="./../index.html">INICIO</a>
+        <a href="./../views/registro.html">REGISTRO</a>
+        <a href="./../views/contacto.html">CONTACTO</a>
     </nav>
         <h1>FOTOS DE VENTAS</h1>
     <main>
