--- a/views/registro.html
+++ b/views/registro.html
@@ -12,6 +12,8 @@
         </header>
         <nav>
             <a href="./../index.html">INICIO</a>
+            <a href="./../views/contacto.html">CONTACTO</a>
+            <a href="./../views/galeria.html">GALERIA</a>
         </nav>
         <section class="form-register">
             <h1>FORMULARIO DE REGISTRO</h1>
